--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,10 @@ dependencies:
   terminate_restart: ^1.0.11
   just_audio_media_kit: ^2.1.0
   just_audio_windows: ^0.2.2
+  media_kit_libs_windows_audio: ^1.0.9
+  shared_preferences: ^2.3.5
+  uuid: ^4.5.1
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -84,6 +88,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  build_runner: ^2.4.13
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
